[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/notes/Parchment.00.jpg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/miamanueva.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/final_scene.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/mouse_left.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "line_1"
tracks/0/type = "value"
tracks/0/path = NodePath("line_1/content:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("line_1:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "line_2"
tracks/0/type = "value"
tracks/0/path = NodePath("line_2:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("line_2/content:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "line_3"
tracks/0/type = "value"
tracks/0/path = NodePath("line_3:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("line_3/content:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "line_4"
tracks/0/type = "value"
tracks/0/path = NodePath("line_4:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("line_4/content:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("line_4/content2:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("line_4/content3:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="final_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_right = 2978.0
margin_bottom = 2240.0
rect_scale = Vector2( 0.42975, 0.32287 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_1" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 473.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Mission Report:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Label" parent="line_1"]
margin_left = 401.915
margin_top = 15.1191
margin_right = 850.915
margin_bottom = 45.1191
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "20981-1925"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_2" type="Label" parent="."]
margin_left = 24.0
margin_top = 103.498
margin_right = 580.0
margin_bottom = 152.498
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Detective Specialist: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Label" parent="line_2"]
margin_left = 510.268
margin_top = 14.9961
margin_right = 959.268
margin_bottom = 44.9961
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Scarlet Valaire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_3" type="Label" parent="."]
margin_left = 24.0
margin_top = 191.087
margin_right = 580.0
margin_bottom = 240.087
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Status:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Label" parent="line_3"]
margin_left = 180.563
margin_top = 11.5022
margin_right = 629.563
margin_bottom = 41.5022
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = " Missing in Action"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_4" type="Label" parent="."]
margin_left = 24.0
margin_top = 261.778
margin_right = 1966.0
margin_bottom = 414.778
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Comments:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Label" parent="line_4"]
margin_left = 263.772
margin_top = -21.8141
margin_right = 1490.77
margin_bottom = 74.1859
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "
It is the recommendation of the high commision that case
 20981-1925 be closed and sealed for Her Majesty's eyes only."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content2" type="Label" parent="line_4"]
margin_left = 24.0
margin_top = 116.723
margin_right = 1244.0
margin_bottom = 212.723
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Further more, it is the recommendation following this incident that all travel
to the Northern Ranges be policed, and all records of locations, structures, 
and landmarks be removed from both offical and unoffical records."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content3" type="Label" parent="line_4"]
margin_left = 24.0
margin_top = 247.537
margin_right = 1244.0
margin_bottom = 343.537
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "May god have mercy on our souls."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/line_1 = SubResource( 6 )
anims/line_2 = SubResource( 7 )
anims/line_3 = SubResource( 8 )
anims/line_4 = SubResource( 9 )

[node name="Exit" type="Label" parent="."]
margin_left = 1026.0
margin_top = 50.0
margin_right = 1066.0
margin_bottom = 64.0
rect_scale = Vector2( 3.72387, 2.87814 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Exit"]
position = Vector2( 48, 5 )
texture = ExtResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
